# object-oriented-analysis-and-design-writeups

./: README.md
00_software_engineering_basics/: README.md
01_classes_and_object/: README.md
code-modify/: README.md
homework/01_classes_and_object/: README.md
homework/02_inheritance/: README.md
lab/02_inheritance/: README.md
lab/03_polymorphism/: README.md
labs/03-polymorphism/: README.md
labs/04-multiple-inheritance/: README.md
labs/05-comparison-of-cpp-java/: README.md
labs/06-code-quality/: README.md
labs/06-source-code-quality/: DOM.md  README.md
labs/07-database-design-normalization/: README.md  lab06.cpp  lab11.cpp
labs/08-data-oriented-model/: README.md  lab07.cpp
labs/09-find-classes-objects/: README.md
labs/10-overview-of-uml/: README.md
labs/11-movie-rental-example/: README.md
labs/12-uml-class-diagram/: README.md
labs/13-uml-sequence-diagram/: README.md
labs/14-design-pattern-1/: README.md
labs/15-design-pattern-2/: MVCPattern.java  README.md
materials/01-5-pointer-reference/: README.md
materials/01-classes-and-object/: README.md
materials/01.5_pointer_reference/: README.md
materials/02_inheritance/: README.md
materials/03_polymorphism/: README.md
materials/04-multiple-inheritance/: README.md
materials/06-source-code-quality/: README.md
materials/08-data-oriented-model/: README.md
materials/10-overview-of-uml/: README.md
templates/: README.md  build.sh
templates/cmake-templates/: CMakeLists.txt  README.md
templates/cmake-templates/inc/: calc.h
templates/cmake-templates/src/: calc.cpp  main.cpp
(+40 files in other folders)
